<resources>
    <string name="show_admob_ads">no</string>
    <string name="admob_banner_id">ca-app-pub-4643384715195426/7256921228</string>
    <string name="admob_insertitial_id">ca-app-pub-4643384715195426/5816094466</string>
    <string name="app_name">ShopMeats</string>
    <string name="facebook_app_id" translatable="false">363133514826548</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb363133514826548</string>
    <string name="geoGoogleApi">AIzaSyCrfPdlkkkkpgQ1s4XkMJ686u8V9jd0NoU</string>
    <string name="link" translatable="false">http://shopmeats.maqsolution.com/</string>
    <string name="servicepath" translatable="false">api/</string>
    <string name="imagepath" translatable="false">uploads/restaurant/</string>
    <string name="later_txt">Please try later!</string>
    <string name="facebook_validation">could not find email id </string>
    <string name="internet_check_error">Please Check Your internet connection</string>
    <string name="text_warning">Warning</string>
    <string name="colorErrorDialog">#303c44</string>
    <string name="txt_load_more">Load More</string>
    <string name="loading">loading</string>
    <string name="currency">₹</string>
    <string name="ok">OK</string>
    <string name="address">34, Medisam Square, New York Street, New York</string>
    <string name="servererror">No Data Found</string>
    <string name="Quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="statementquit">Are you sure you want to quit?</string>
    <string name="txt_gotogps">Goto Settings Page To Enable GPS</string>
    <string name="txt_gps_error">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="txt_try_later">Please try later!</string>
    <string name="txt_load">Loading</string>
    <string name="txt_aboutus">About Us</string>
    <string name="aboutus_filename">aboutus.html</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_condition_filename">tnc.html</string>
    <string name="txt_most_rated_restaurant">Most Rated Shops</string>
    <string name="txt_cart">Cart</string>
    <string name="txt_checkout">Checkout</string>
    <string name="norecord">No Records Found</string>
    <string name="loginmsg">Needs to login first!</string>
    <string name="BASIC_PRICE">Basic price</string>
    <string name="QUANTITY">Quantity</string>
    <string name="txt_category">Category</string>
    <string name="txt_search">Search</string>
    <string name="order_status">Order Status</string>
    <string name="txt_order_no">Order No</string>
    <string name="txt_order_amount">Order Amount</string>
    <string name="txt_estimated_delivery_time">Estimated Delivery Time</string>
    <string name="txt_order_time">Order Time</string>
    <string name="txt_complete_order">Complete Order</string>
    <string name="txt_address">ADDRESS</string>
    <string name="txt_phone_number">PHONE NUMBER</string>
    <string name="txt_timing">TIMING</string>
    <string name="txt_food_type">FOOD TYPE</string>
    <string name="txt_delivery_time">DELIVERY TIME</string>
    <string name="txt_delivery_type">DELIVERY TYPE</string>
    <string name="txt_menu">MENU</string>
    <string name="share">Share!</string>
    <string name="sharetitle">Share vendor with</string>
    <string name="more">More</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="km">km</string>
    <string name="shared_post">You shared this post</string>
    <string name="try_again">Please try again later!</string>
    <string name="whatsapp_notinstalled">Whatsapp have not been installed.</string>
    <string name="download_delivery">Download Meat delivery app and order from nearby meat shop</string>
    <string name="address1">Address:</string>
    <string name="mobile_no1">Mobile No:</string>
    <string name="login_with_google">Login With Google+</string>
    <string name="login_with_delivery">Login as delivery boy</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="txt_new_register">Create new account</string>
    <string name="or">OR</string>
    <string name="txt_login">Login</string>
    <string name="txt_password">Password</string>
    <string name="txt_email">Email</string>
    <string name="err_msg_password">Enter Valid Password</string>
    <string name="err_msg_email">Enter Valid Email_id</string>
    <string name="err_msg_name">Enter Valid Username</string>
    <string name="err_msg_phone">Enter Valid Phone Number</string>
    <string name="txt_valid_phone_number">Phone Number is Valid</string>
    <string name="txt_invalid_phonenumber">Phone Number is Invalid</string>
    <string name="txt_phone_required">Phone Number is required</string>
    <string name="img_delivery">img_delivery</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="phone_description">we requier your phone number to get in touch while delivering your order we also assure your data is secure with us and we will not misuse your data other than delivery purpose </string>
    <string name="txt_take_a_picture">Take a picture</string>
    <string name="txt_select_picture">Select picture</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="agree_t_and_c"><![CDATA[I agree to the T & C]]></string>
    <string name="hint_full_name">Full name</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="txt_map">Map</string>
    <string name="txt_more">MORE</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_map">Sorry! unable to create maps</string>
    <string name="no_restaurant">No more vendor</string>
    <string name="opentill">Open:Open till</string>
    <string name="closetill">Close:open at</string>
    <string name="order_history">Order History</string>
    <string name="txt_my_orders">My Orders</string>
    <string name="order_date">Order Date:</string>
    <string name="txt_review">Review</string>
    <string name="revlogin">You have to login for give review</string>
    <string name="review_hint">Please write about your personal experience at this vendor</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_search_by_radius">Search by Radius</string>
    <string name="txt_distance">Distance</string>
    <string name="txt_radius">Radius</string>
    <string name="txt_current_location">Current Location</string>
    <string name="action_settings">Settings</string>
    <string name="txt_select_location">Select Location</string>
    <string name="txt_select_address">select address from map</string>
    <string name="txt_notes">Please type your address</string>
    <string name="txt_place_order">Place Order</string>
    <string name="notbooked">Please try again.Your order is not booked.</string>
    <string name="error_lat_long">Latitude and Longitude are not valid!</string>
    <string name="plese_enter_place">Plese enter place</string>
    <string name="txt_search_restaurent">Search Meat Shops</string>
    <string name="txt_search_on_map">Search on Map</string>
    <string name="txt_suggested_restaurent">Most Rated Shops</string>
    <string name="txt_cusine">Category</string>
    <string name="txt_favourite">Favourite</string>
    <string name="txt_share">Share</string>
    <string name="txt_terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="txt_about_us">About Us</string>
    <string name="txt_signin">Sign in</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_notification">My Orders</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="txt_home_header">Home</string>
    <string name="search">Search vendors, cuisines and…</string>
    <string name="txt_signout">Sign Out</string>
    <string name="noorder">No order received yet!</string>
    <string name="error_logout">Are you sure you want to LogOut?</string>
    <string name="confirmorder1">Your order is placed with item</string>
    <string name="confirmorder2">;Total Amount is</string>
    <string name="txt_description">Description=</string>
    <string name="txt_price">Price=</string>
    <string name="txt_quantity">Quantity=</string>
    <string name="txt_total">TOTAL</string>
    <string name="order_no">Order No :</string>
    <string name="order_processing">Order is processing</string>
    <string name="order_ready_to_delivery">Order is out for delivery</string>
    <string name="order_delivered">Order is Delivered</string>
    <string name="timelineo1">Your Order has been placed</string>
    <string name="timelineo2">Order has been verified by vendor</string>
    <string name="timelineo3">Order is processing</string>
    <string name="timelineo4">Order is out for delivery</string>
    <string name="timelineo5">Order is delivered</string>
    <string name="delivery_boy_login">Delivery Boy Login</string>
    <string name="email_required">Email Required</string>
    <string name="passward_required">Passward Required</string>
    <string name="txt_setPresence">Set Your Presence</string>
    <string name="no_order_left">You Don\'t have any pending delivery yet, stay online you will get delivery soon.</string>
    <string name="txt_call_customer">Call Customer</string>
    <string name="txt_view_map">View Map</string>
    <string name="txt_order_history">Order History</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="txt_sign_out">Sign Out</string>
    <string name="txt_delivery_boy">Delivery boy</string>
    <string name="txt_order_specifications">Order Specifications</string>
    <string name="timeline6">Order is rejected</string>
    <string name="cancle">Cancel</string>
    <string name="order_complete">Your assigned order is completed.</string>
    <string name="allready_given">Already feedback is given</string>
    <string name="cart_empty">your cart is empty</string>
    <string name="login">Login Successful</string>
    <string name="user_connect">User is Connect</string>
    <string name="conti">Continue..</string>
    <string name="log_out">Log Out?</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="paymet">Payment</string>
    <string name="items">Items</string>
    <string name="order_amount">Order Amount</string>
    <string name="your_experience">Your Experience</string>
    <string name="your_rating">YOUR RATING</string>
    <string name="hint">Please write about your personal experience at this vendor</string>
    <string name="submit">Submit</string>
    <string name="no_review">No review Available</string>
    <string name="thanks_you">Thank you for your feedback</string>
    <string name="thanks">Thanks</string>
    <string name="review">Review Please</string>
    <string name="need_login_for_review">You have to login for give review</string>
    <string name="open_till"> OPEN :Open till </string>
    <string name="close"> CLOSE : open at </string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name</string>
    <string name="contact_no">Contact No</string>
    <string name="email">Email</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="change_password">Change Password</string>
    <string name="toolbar_forgotPwd">Forgot Password</string>
    <string name="txt_submit">Submit</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
</resources>