<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="maq.shopmeats.activity.ForgotPassword">

    <RelativeLayout
        android:id="@+id/rel_header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbarheight"
        android:background="@color/toolbarcolor">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/ib_back"
            android:text="@string/toolbar_forgotPwd"
            android:textColor="#fff"
            android:textSize="@dimen/toolbartitle"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/rel_header"

        >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/img_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="32dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_delivery"
                    android:src="@drawable/img_loginscreen" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_delivery"
                    android:layout_marginTop="16dp">

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:hint="@string/email_required"
                        android:inputType="textEmailAddress"
                        android:textAlignment="viewStart"
                        android:textColor="#000"
                        android:textSize="@dimen/medium"
                        tools:ignore="SpUsage" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/input_layout_email"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:background="@mipmap/login_btn_bg"
                    android:text="@string/txt_submit"
                    android:textAllCaps="false"
                    android:textColor="#8D1926"
                    android:textSize="@dimen/medium"
                    tools:ignore="SpUsage" />




            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>